# head_first_design_patterns

./: Cargo.toml
command_pattern/: Cargo.toml
command_pattern/src/: home_automation.rs  lib.rs
command_pattern/tests/: home_automation_test.rs
decorator_pattern/: Cargo.toml
decorator_pattern/src/: lib.rs  starbuzz_coffee.rs
decorator_pattern/tests/: starbuzz_coffee_test.rs
factory_pattern/: Cargo.toml
factory_pattern/pizza_store_macro/: Cargo.toml
factory_pattern/src/: lib.rs  objectville_pizza.rs
factory_pattern/tests/: objectville_pizza_test.rs
iterator_composite_pattern/: Cargo.toml
iterator_composite_pattern/src/: lib.rs  objectville_restaurant.rs
iterator_composite_pattern/tests/: objectville_restaurant_test.rs
observer_pattern/: Cargo.toml
observer_pattern/src/: lib.rs  weather_app.rs
observer_pattern/tests/: weather_app_test.rs
remote_proxy_pattern/: Cargo.toml  build.rs
remote_proxy_pattern/proto/: gumball_machine_service.proto
remote_proxy_pattern/src/: gumball_machine.rs  gumball_machine_remote_monitoring_test.rs  gumball_machine_server.rs  gumball_machine_skeleton.rs  gumball_machine_stub.rs  gumball_monitor.rs  gumball_monitor_client.rs  lib.rs
singleton_pattern/: Cargo.toml
singleton_pattern/src/: choc_o_holic.rs  lib.rs
singleton_pattern/tests/: choc_o_holic_test.rs
state_pattern/: Cargo.toml
state_pattern/src/: lib.rs  mighty_gumball.rs
state_pattern/tests/: mighty_gumball_test.rs
strategy_pattern/: Cargo.toml
strategy_pattern/src/: lib.rs  (+1 more)
template_pattern/: Cargo.toml
virtual_proxy_pattern/: Cargo.toml
(+23 files in other folders)
