[workspace]
members = [
	"strategy_pattern",
	"observer_pattern",
	"decorator_pattern",
	"factory_pattern",
	"singleton_pattern",
	"command_pattern",
	"template_pattern",
	"iterator_composite_pattern",
	"state_pattern",
	"virtual_proxy_pattern",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
